# IcebreakerQt

./: .gitignore  CMakeLists.txt  README.md
include/: APIWrapper.h
include/api/: Wrapper.h
include/api/models/: Entity.h  File.h  Package.h  Repository.h  Response.hpp  User.h
include/models/: File.h  Package.h  Response.hpp
src/: APIWrapper.cpp  APIWrapperUtils.cpp  Wrapper.cpp  WrapperUtils.cpp
